# ARGlass

./: README.md
esp32-cam software/: CMakeLists.txt  sdkconfig  sdkconfig.ci  sdkconfig.defaults  sdkconfig.old
esp32-cam software/assets/fonts/: TAMSYN.FNT
esp32-cam software/main/: CMakeLists.txt  Kconfig.projbuild  button.c  button.h  camera.c  camera.h  http_client.c  http_client.h  idf_component.yml  main.c  nav_menu.c  nav_menu.h  proc_defs.h  st7735s.c  st7735s.h  wifi.c  wifi.h
server/: package-lock.json  package.json  server.js
